--- a/public/assets/css/AdminLeave.css
+++ b/public/assets/css/AdminLeave.css
@@ -139,6 +139,33 @@ tr:hover {
 .FemaleRow{
     background-color: pink;
 }
+.approval {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap; 
+    gap: 15px; 
+}
+.approval-btns {
+    display: inline-flex;
+    margin: 0 10px;
+}  
+.approval-btns input[type="radio"] {
+    margin-right: 5px;
+}
+.ss-and-approval {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.buttons{
+    display: flex;
+    gap:10px;
+    flex-direction: column;
+    align-items: center;
+}
 
 /* Alert and Errors */
 
