--- a/public/assets/css/StudentDashboard.css
+++ b/public/assets/css/StudentDashboard.css
@@ -201,6 +201,59 @@ background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/s
         overflow-y: visible; /* Remove scrollbar */
     }
 }
+/* Alerts and Errors */
+.alertalert-danger{
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: none;
+    background: #f7f7f7;
+    color: #000000;
+    padding: 20px;
+}
+.error{
+    
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    
+}
+.mssg{
+    border: 1px solid #bf1515;
+    border-radius: 4px;
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+}
+.err_p{
+    margin: 0;
+    font-family: "Inter", sans-serif;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 13px;
+}
+.error_img{
+    height:20px; 
+    width:20px;
+}
+.text-danger{
+    color: red;
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+}
+.text-safe{
+    color: rgb(76, 220, 37);
+    font-family: "Inter", sans-serif;
+    font-weight: bold;
+    font-size: 13px;
+}
+.disabled{
+    background-color: rgb(224, 224, 224);
+}
+
 #LeaveId{
     padding-right:20px;
 }
